tests/invalid/spurious_mode_error.err_exp
spurious_mode_error.m:087: In clause for predicate `foldit'/4:
spurious_mode_error.m:087:   error: undefined predicate `foobie'/3.
